# ns3-efm-study-overview

./: .gitignore  .gitmodules  README.md  requirements.txt
automation/: .gitignore  README.md  execute_simulation_pipeline.py  run-analyses.py  run-simulations.py
automation/analysis/: configuration_generator_analysis.py  generation-config-analysis-ANRW-10-FlowAndMonitorSelection_PERC.json  generation-config-analysis-ANRW-11-FlowAndMonitorSelection_PERC.json  generation-config-analysis-ANRW-5-FlowAndMonitorSelection_PERC.json
automation/configs-meta/: .gitignore  config-meta-analysis-default.json  config-meta-sim-default.json
automation/simulation/: configuration_generator_sim.py  enrich_with_latency.py  generation-config-sim-ANRW-10.json  generation-config-sim-ANRW-11.json  generation-config-sim-ANRW-5.json  generation-config-sim-PING-ROUTES.json
automation/topologies/: Geant-2023-LATENCY.json  Geant-2023.txt  cesnet_topology.txt  telekom-germany-formatted.txt  topology-lookup.json
observer-placement-generator/: main.py  op_generators.py  op_manager.py
observer-placement-generator/output/: observer-placements.json
plotting/: .gitignore  plot_helper.py  plot_main.py
plotting/configs/: plot-config-ANRW-10-FlowMonitorSelection-Perc.json  plot-config-ANRW-11-FlowMonitorSelection-Perc.json  plot-config-ANRW-5-FlowMonitorSelection-Perc.json  plot-config-ANRW-Complete.json
raw-result-processing/: .clang-format  CMakeLists.txt
raw-result-processing/data/: analysis-config.json  analysis-default-config.json
raw-result-processing/src/: CMakeLists.txt  EfmSimProcessor.cpp
raw-result-processing/src/analysis/: CMakeLists.txt  analysis-config-schema.json  analysis-config.cc  analysis-config.h  analysis-manager.cc  analysis-manager.h  classified-path-set.cc  classified-path-set.h  combined-flow-set.cc  combined-flow-set.h  config-validator.py  failure-localization.cc  failure-localization.h  link-characteristic-set.cc  link-characteristic-set.h  output-generator.cc  output-generator.h
raw-result-processing/src/post-processing/: data_manager.py  ping_routes_extractor.py  result_extraction.py  run_processing.py
raw-result-processing/src/simdata/: CMakeLists.txt  helper-templates.h  sim-data-manager.cc  sim-data-manager.h  sim-events.cc  sim-events.h  sim-filter.cc  sim-filter.h  sim-flow.cc  sim-flow.h  sim-path.cc  sim-path.h  sim-ping-pair.cc  sim-ping-pair.h  sim-result-set.cc  sim-result-set.h  sim-vantage-point.cc  sim-vantage-point.h
setup-scripts/: ns3-3-36-1-changes.patch  setup-all.sh  setup-result-processing.sh  setup-sim.sh
